first functional version

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="./scripts/templates.js"></script>
     <script src="./scripts/events.js"></script>
 </head>
-<body>
-    <h1>Tic-Tac-Toe</h1>
-    
-
+<body onload="init()">
+    <h1>Tic Tac Toe</h1>
+    <div id="content"></div>
+    <button onclick="resetGame()">Neustart</button>
 </body>
 </html>
