--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +13,14 @@
     <script src="./scripts/templates.js"></script>
     <script src="./scripts/events.js"></script>
 </head>
+
 <body onload="init()">
-    <h1>Tic Tac Toe</h1>
-    <div id="content"></div>
-    <button onclick="resetGame()">Neustart</button>
+    <div class="game-content">
+        <h1>Tic Tac Toe</h1>
+        <div id="content"></div>
+        <button onclick="resetGame()">Neustart</button>
+    </div>
+
 </body>
+
 </html>
